# SDLW-deprecated

./: .gitignore  LICENSE.md  README.md  meson.build  meson_options.txt  premake5.lua
examples/: meson.build
examples/callbacks/: main.c
examples/unknown/: main.c
examples/window/: main.c
include/SDLW/: SDLW.h
src/: SDLW_Renderer.c  SDLW_Renderer.h  SDLW_Window.c  SDLW_Window.h
